<resources>
    <string name="app_name">MyTaxiTask</string>
    <string name="mapbox_access_token">sk.eyJ1Ijoib2RpbDE3NzkiLCJhIjoiY2xwNm9oMWQ2MjMyczJrczY4ODI2YXh1bCJ9.KxApkktfhZOI4cSxpgx_bQ</string>
    <string name="str_free">Свободен</string>
    <string name="str_busy">Занят</string>
    <string name="str_orders">Зазказы</string>
    <string name="str_border">Бордюр</string>
    <string name="str_rates">Тарифы</string>
</resources>